--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="UTF-8">
-  <title>Basketball Team Signup</title>
- </head>
- <body>
- </body>
-</html>
-
-
+<form method="post" action="/team">
+  <h1>Create a Basketball Team!</h1>
+  
+  <h3>Team Name: <input type="text" name="name" id="name"> </h3>
+  <br>
+  <h3>Coach: <input type="text" name="coach" id="coach"> </h3>
+  <br>
+  <h3>Point Guard: <input type="text" name="pg" id="pg"> </h3>
+  <br>
+  <h3>Shooting Guard: <input type="text" name="sg" id="sg"> </h3>
+  <br>
+  <h3>Small Forward: <input type="text" name="sf" id="sf"> </h3>
+  <br>
+  <h3>Power Forward: <input type="text" name="pf" id="pf"> </h3>
+  <br>
+  <h3>Center: <input type="text" name="c" id="c"> </h3>
+  <br>
+  <input type="submit" id="submit" value="submit">
+</form>
