--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -15,5 +15,5 @@
   <br>
   <h3>Center: <input type="text" name="c" id="c"> </h3>
   <br>
-  <input type="submit" id="submit" value="submit">
+  <button type="Submit" id="Submit" value="Submit">
 </form>
