--- a/views/team.erb
+++ b/views/team.erb
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <meta charset="UTF-8">
-  <title>Basketball Team</title>
- </head>
- <body>
+<form method="post" action="/team">
     <h1>Team Name: <%= @name %></h1>
     <h3>Coach: <%= @coach %></h3>
     <h3>Point Guard: <%= @pg %></h3>
@@ -12,7 +6,4 @@
     <h3>Small Forward: <%= @sf %></h3>
     <h3>Power Forward: <%= @pf %></h3>
     <h3>Center: <%= @c %></h3>
- </body>
-</html>
-
-
+</form>
