Automatically backed up by Learn

--- a/views/newteam.erb
+++ b/views/newteam.erb
@@ -15,5 +15,5 @@
   <br>
   <h3>Center: <input type="text" name="c" id="c"> </h3>
   <br>
-  <button type="Submit" id="Submit" value="Submit">
+  <button type="Submit" id="Submit" value="Submit">Submit</button>
 </form>
