--- a/views/team.erb
+++ b/views/team.erb
@@ -1,9 +1,16 @@
-<form method="post" action="/team">
-    <h1>Team Name: <%= @name %></h1>
-    <h3>Coach: <%= @coach %></h3>
-    <h3>Point Guard: <%= @pg %></h3>
-    <h3>Shooting Guard: <%= @sg %></h3>
-    <h3>Small Forward: <%= @sf %></h3>
-    <h3>Power Forward: <%= @pf %></h3>
-    <h3>Center: <%= @c %></h3>
-</form>
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="UTF-8">
+  <title>Basketball Team</title>
+ </head>
+ <body>
+  <h1>Team Name: <%= @name %></h1>
+  <h2>Coach: <%= @coach %></h2>
+  <h2>Point Guard: <%= @pg %></h2>
+  <h2>Power Forward: <%= @pf %></h2>
+  <h2>Shooting Guard: <%= @sg %></h2>
+  <h2>Small Forward: <%= @sf %></h2>
+  <h2>Center: <%= @c %></h2>
+ </body>
+</html>
